add back in missing reference

--- a/mainnet/2025-07-13-budget-2025/EC-0001-25-midgard/EC-0001.jsonld.md
+++ b/mainnet/2025-07-13-budget-2025/EC-0001-25-midgard/EC-0001.jsonld.md
@@ -131,6 +131,7 @@ References
 - [Approved Budget Info Action submitted by Intersect](https://gov.tools/governance_actions/e14de8d9dc4f4ddf3fe9250a8a926e20f10e99b86bd0610b77d7a054981591ee#0)
 - [Details of all successful proposals (CSV)](ipfs://bafybeicwrop4q7xvnyjdd5drumbe56sqtm5lbe2ul3c262zt4hgguzdycm)
 - [Automating Accountability: Cardano's Smart Contract Framework Blog](ipfs://bafybeihqx4ae72z7suqfnxrpqpqithp43cai7o2uuewnqtezgaoyc3ptyq)
+- [Sundae Labs Budget Management Smart Contracts Github Repository](https://github.com/SundaeSwap-finance/treasury-contracts)
 - [Budget Management Smart Contracts TxPipe Audit Report](ipfs://)
 - [Budget Management Smart Contracts MLabs Audit Report](ipfs://)
 
