add mlabs signed audit report and regenerate action metadata

--- a/mainnet/2025-07-13-budget-2025/EC-0001-25-midgard/EC-0001.jsonld.md
+++ b/mainnet/2025-07-13-budget-2025/EC-0001-25-midgard/EC-0001.jsonld.md
@@ -68,9 +68,7 @@ A written off-chain Legal Contract will be created between the Vendor and the Ca
 
 All milestones, acceptance criteria, payment amounts and expected delivery dates will be agreed between the Vendor and Intersect, acting on behalf of the CDH. The vendor will deliver according to the agreed-upon project schedule within the Legal Contract, of which the necessary information will be made public via the budget management platform via transaction metadata.
 
-Defined by the milestones within a Legal Contract, the vendor will submit and attest
-
-milestone acceptance to the community, Intersect or 3rd Party Assurer.
+Defined by the milestones within a Legal Contract, the vendor will submit and attest milestone acceptance to the community, Intersect or 3rd Party Assurer.
 
 Project progress will be monitored via Intersect's delivery assurance function which will be communicated to the community.
 
@@ -90,7 +88,7 @@ Intersect will utilize a single Treasury Reserve Smart Contract (TRSC), with man
 
 The Oversight Committee consists of Sundae Labs, Cardano Foundation, Dquadrant, Xerberus and NMKR. Their role is to independently verify key administrative actions using on-chain logic, ensuring accuracy and consistency without exercising discretion over governance decisions.
 
-For all details on Intersect's configuration please see the **[Smart Contract Guide**](https://docs.intersectmbo.org/cardano-facilitation-services/cardano-budget/intersect-administration-services/smart-contracts-as-part-of-our-administration) on the knowledge base.
+For all details on Intersect's configuration please see the **[Smart Contract Guide](https://docs.intersectmbo.org/cardano-facilitation-services/cardano-budget/intersect-administration-services/smart-contracts-as-part-of-our-administration)** on the knowledge base.
 
 The high level permissions are as follows:
 
