--- a/mainnet/2025-07-13-budget-2025/EC/EC-0003-25-blockfrost/EC-0003-25.jsonld.md
+++ b/mainnet/2025-07-13-budget-2025/EC/EC-0003-25-blockfrost/EC-0003-25.jsonld.md
@@ -128,7 +128,8 @@ The subsections; Contract Management, Project Delivery, and Budget Management To
 - [Blockfrost platform Github repository](https://github.com/blockfrost/blockfrost-platform)
 - [Icebreakers public Grafana dashboard](https://icebreakers.blockfrost.io/)
 - [Blockfrost.io X account](https://x.com/blockfrost_io)
-- [Project Proposal In Ekklesia - <https://2025budget.intersectmbo.org/ballots/680d1b63565577986442d123/proposals/680d1b63565577986442d14a> Approved Budget Info Action submitted by Intersect via GovTool](https://gov.tools/outcomes/governance_actions/e14de8d9dc4f4ddf3fe9250a8a926e20f10e99b86bd0610b77d7a054981591ee#0)
+- [Project Proposal In Ekklesia](https://2025budget.intersectmbo.org/ballots/680d1b63565577986442d123/proposals/680d1b63565577986442d14a)
+- [Approved Budget Info Action submitted by Intersect](https://gov.tools/governance_actions/e14de8d9dc4f4ddf3fe9250a8a926e20f10e99b86bd0610b77d7a054981591ee#0)
 - [Details of all successful proposals (CSV)](ipfs://bafybeicwrop4q7xvnyjdd5drumbe56sqtm5lbe2ul3c262zt4hgguzdycm)
 - [Automating Accountability: Cardano's Smart Contract Framework Blog](ipfs://bafybeihqx4ae72z7suqfnxrpqpqithp43cai7o2uuewnqtezgaoyc3ptyq)
 - [Sundae Labs Budget Management Smart Contracts Github Repository](https://github.com/SundaeSwap-finance/treasury-contracts)
